--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -320,7 +320,7 @@
             updateText('networkHashrate', getReadableHashRateString(lastStats.network.difficulty / lastStats.config.coinDifficultyTarget) + '/sec');
             updateText('networkDifficulty', lastStats.network.difficulty.toString());
             updateText('blockchainHeight', lastStats.network.height.toString());
-            updateText('networkLastReward', getReadableCoins(lastStats.network.reward, 4));
+            updateText('networkLastReward', getReadableCoins(lastStats.network.reward * 0.95, 4));
             updateText('lastHash', lastStats.network.hash.substr(0, 13) + '...').setAttribute('href', getBlockchainUrl(lastStats.network.hash));
 
             updateText('poolHashrate', getReadableHashRateString(lastStats.pool.hashrate) + '/sec');
